--- a/src/styles/transition.scss
+++ b/src/styles/transition.scss
@@ -1,5 +1,16 @@
 // See https://staging-cn.vuejs.org/guide/built-ins/transition.html for detail
 
+// fade
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
+
 // fade-transform
 .fade-transform-leave-active,
 .fade-transform-enter-active {
