--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,3 +29,10 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+#nprogress {
+    pointer-events: none;
+}
+#nprogress .bar {
+    background: #888;
+}
