chore:add antfu website config & fix something css prombles

--- a/src/styles/theme/core/layout.scss
+++ b/src/styles/theme/core/layout.scss
@@ -7,4 +7,9 @@
         color: $font-color;
         background-color: lighten($theme-bg-color, 2%) !important;
     }
+
+    .footer {
+        color: $font-color;
+        background-color: lighten($theme-bg-color, 2%) !important;
+    }
 }
