--- a/src/styles/theme/core/layout.scss
+++ b/src/styles/theme/core/layout.scss
@@ -2,14 +2,23 @@
 .app-wrapper {
     color: $font-color;
     background-color: lighten($theme-bg-color, 2%) !important;
+    // background-color: $theme-bg-color;
 
     .navigation-bar {
         color: $font-color;
         background-color: lighten($theme-bg-color, 2%) !important;
+        // background-color: $theme-bg-color;
+    }
+
+    .app-main {
+        color: $font-color;
+        background-color: lighten($theme-bg-color, 2%) !important;
+        // background-color: $theme-bg-color;
     }
 
     .footer {
         color: $font-color;
         background-color: lighten($theme-bg-color, 2%) !important;
+        // background-color: $theme-bg-color;
     }
 }
