feat: add rain fx

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,7 +17,7 @@
   --c-bg: #fff;
   --c-scrollbar: #eee;
   --c-scrollbar-hover: #bbb;
-  --c-noprogress-color: #888;
+  --c-noprogress-color: #d0d0d0;
 }
 
 html {
