feat:add spacename over

--- a/src/styles/theme/light/variables.scss
+++ b/src/styles/theme/light/variables.scss
@@ -16,4 +16,4 @@ $hover-color: #fff;
 $border-color: #303133;
 
 // focus input框 背景颜色
-$input-focus-bg-color:rgba(201, 201, 201, 0.3)
+$input-focus-bg-color: rgba(201, 201, 201, 0.3);
