chore: update router-view ways & add website router and shader route , diff layout

--- a/src/styles/theme/core/layout.scss
+++ b/src/styles/theme/core/layout.scss
@@ -1,19 +1,20 @@
 /** Layout 相关 */
-.app-wrapper {
+.website-layout {
     color: $font-color;
     background-color: lighten($theme-bg-color, 2%) !important;
-    // background-color: $theme-bg-color;
 
     .navigation-bar {
         color: $font-color;
         background-color: lighten($theme-bg-color, 2%) !important;
-        // background-color: $theme-bg-color;
     }
 
     .app-main {
         color: $font-color;
         background-color: lighten($theme-bg-color, 2%) !important;
-        // background-color: $theme-bg-color;
     }
+}
 
+.shader-layout {
+    color: $font-color;
+    background-color: lighten($theme-bg-color, 2%) !important;
 }
