--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -90,3 +90,41 @@ html:not(.dark) [img-dark] {
   //   --enter-stage: var(--enter-stages[content.childNodes[n - 1]]);
   // }
 }
+
+.rainfx {
+  position: fixed;
+  top: 0;
+  left: 0;
+  .raindrop {
+    position: absolute;
+    height: 1.5rem;
+    line-height: 1.5rem;
+    text-transform: uppercase;
+    color: $PrimaryColor-default;
+    text-shadow:
+      0 0 5px $PrimaryColor-default,
+      0 0 15px $PrimaryColor-default,
+      0 0 30px $PrimaryColor-default;
+    transform-origin: bottom;
+    animation: animate 1s linear forwards;
+    opacity: 0.3;
+    transition: all 0.3s;
+  }
+
+  @keyframes animate {
+    0% {
+      transform: translateY(0) scale(1);
+      opacity: 0.3;
+    }
+
+    70% {
+      transform: translateY(calc(100vh - 1.5rem)) scale(1);
+      opacity: 0.2;
+    }
+
+    100% {
+      transform: translateY(calc(100vh - 1.5rem)) scale(0);
+      opacity: 0.1;
+    }
+  }
+}
