feat: add shader-layout sidebar

--- a/src/styles/theme/core/vuetify.scss
+++ b/src/styles/theme/core/vuetify.scss
@@ -3,3 +3,10 @@
 .v-field--focused {
     background-color: $input-focus-bg-color !important;
 }
+
+
+.side-bar {
+    .tab-active {
+        border: 1px solid $border-color;
+    }
+}
