--- a/src/styles/theme/light/variables.scss
+++ b/src/styles/theme/light/variables.scss
@@ -13,7 +13,7 @@ $active-font-color: #fff;
 // hover 状态下文字颜色
 $hover-color: #fff;
 // 边框颜色
-$border-color: #303133;
+$border-color: #34e56f;
 
 // focus input框 背景颜色
 $input-focus-bg-color: rgba(201, 201, 201, 0.3);
