feat: add three gui state & fps control  search input

--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -39,7 +39,7 @@ input,
 textarea,
 select,
 button {
-    appearance: none;
+    // appearance: none;
     border: none;
     outline: none;
     background: none;
