fix: update dat gui dom views & stats dom views

--- a/src/styles/theme/dark/variables.scss
+++ b/src/styles/theme/dark/variables.scss
@@ -13,7 +13,7 @@ $active-font-color: #fff;
 // hover 状态下文字颜色
 $hover-color: #fff;
 // 边框颜色
-$border-color: #34e56f;
+$border-color: #24cf5d;
 
 // focus input框 背景颜色
 $input-focus-bg-color:rgba(80, 80, 80, 0.3)
