--- a/src/styles/theme/core/vuetify.scss
+++ b/src/styles/theme/core/vuetify.scss
@@ -7,6 +7,7 @@
 
 .side-bar {
     .tab-active {
-        border: 1px solid $border-color;
+        transition: all .3s;
+        border: 0.25rem solid $border-color;
     }
 }
