fix: shader layout -> wegl layout * improve routes about the webgl module

--- a/src/styles/theme/core/layout.scss
+++ b/src/styles/theme/core/layout.scss
@@ -14,7 +14,7 @@
     }
 }
 
-.shader-layout {
+.webgl-layout {
     color: $font-color;
     background-color: lighten($theme-bg-color, 2%) !important;
 }
