--- a/src/styles/theme/light/variables.scss
+++ b/src/styles/theme/light/variables.scss
@@ -15,5 +15,9 @@ $hover-color: #fff;
 // 边框颜色
 $border-color: #24cf5d;
 
+// reumse title
+$reumse-title-bg: #24cf5d;
+
+
 // focus input框 背景颜色
 $input-focus-bg-color: rgba(201, 201, 201, 0.3);
