feat: add new resume instructure

--- a/src/styles/theme/dark/variables.scss
+++ b/src/styles/theme/dark/variables.scss
@@ -15,5 +15,8 @@ $hover-color: #fff;
 // 边框颜色
 $border-color: #24cf5d;
 
+// reumse title
+$reumse-title-bg: #16833b;
+
 // focus input框 背景颜色
-$input-focus-bg-color:rgba(80, 80, 80, 0.3)
+$input-focus-bg-color: rgba(80, 80, 80, 0.3);
