--- a/src/styles/theme/core/index.scss
+++ b/src/styles/theme/core/index.scss
@@ -3,6 +3,5 @@
   @import "./login.scss";
   @import "./error-page.scss";
   @import "./other.scss";
-  @import './vuetify.scss';
-  @import './resume.scss';
+  @import "./vuetify.scss";
 }
